--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Ekam Kaire
+description: My APCSP blog
 github_username: Ekamjot-Kaire
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "fast-pages"
@@ -38,9 +38,9 @@ baseurl: "/fast-pages" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
-  social_links:
-    twitter: fastdotai
-    github: fastai
+  social_links: 
+    email: ekamjot.kaurr@gmail.com 
+    github: Ekamjot-Kaire
 
 # Set this to true to get LaTeX math equation support
 use_math: 
