--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ baseurl: "/fast-pages" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
+  skin: classic
   #  social_links:
   #    twitter: NighthawkCoding
   #    github: nighthawkcoders
