--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ baseurl: "/fast-pages" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
-  skin: classic
+  skin: clasic 
   #  social_links:
   #    twitter: NighthawkCoding
   #    github: nighthawkcoders
